--- a/dev/html/music.html
+++ b/dev/html/music.html
@@ -41,10 +41,10 @@
                 </button>
               </div>
               <div class="modal-body">
-                <img src="img/childishgambino03.jpg" loading="lazy" alt="Childish Gambino gallery photo" class="img-fluid mb-3">
-                <img src="img/childishgambino02.jpg" loading="lazy" alt="Childish Gambino gallery photo" class="img-fluid mb-3">
-                <img src="img/childishgambino01.jpg" loading="lazy" alt="Childish Gambino gallery photo" class="img-fluid mb-3">
-                <img src="img/childishgambino05.jpg" loading="lazy" alt="Childish Gambino gallery photo" class="img-fluid">
+                <img src="img/childishgambino03.jpg" alt="Childish Gambino gallery photo" class="img-fluid mb-3">
+                <img src="img/childishgambino02.jpg" alt="Childish Gambino gallery photo" class="img-fluid mb-3">
+                <img src="img/childishgambino01.jpg" alt="Childish Gambino gallery photo" class="img-fluid mb-3">
+                <img src="img/childishgambino05.jpg" alt="Childish Gambino gallery photo" class="img-fluid">
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal" alt="Close" title="Close">Close</button>
@@ -70,10 +70,10 @@
                 </button>
               </div>
               <div class="modal-body">
-                <img src="img/floracash01.jpg" loading="lazy" alt="Flora Cash gallery photo" class="img-fluid mb-3">
-                <img src="img/floracash02-2.jpg" loading="lazy" alt="Flora Cash gallery photo" class="img-fluid mb-3">
-                <img src="img/floracash03.jpg" loading="lazy" alt="Flora Cash gallery photo" class="img-fluid mb-3">
-                <img src="img/floracash10.jpg" loading="lazy" alt="Flora Cash gallery photo" class="img-fluid">
+                <img src="img/floracash01.jpg" alt="Flora Cash gallery photo" class="img-fluid mb-3">
+                <img src="img/floracash02-2.jpg" alt="Flora Cash gallery photo" class="img-fluid mb-3">
+                <img src="img/floracash03.jpg" alt="Flora Cash gallery photo" class="img-fluid mb-3">
+                <img src="img/floracash10.jpg" alt="Flora Cash gallery photo" class="img-fluid">
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal" alt="Close" title="Close">Close</button>
@@ -99,10 +99,10 @@
                 </button>
               </div>
               <div class="modal-body">
-                <img src="img/louisthechild09.jpg" loading="lazy" alt="Louis The Child gallery photo" class="img-fluid mb-3">
-                <img src="img/louisthechild13.jpg" loading="lazy" alt="Louis The Child gallery photo" class="img-fluid mb-3">
-                <img src="img/louisthechild14.jpg" loading="lazy" alt="Louis The Child gallery photo" class="img-fluid mb-3">
-                <img src="img/louisthechild15.jpg" loading="lazy" alt="Louis The Child gallery photo" class="img-fluid">
+                <img src="img/louisthechild09.jpg" alt="Louis The Child gallery photo" class="img-fluid mb-3">
+                <img src="img/louisthechild13.jpg" alt="Louis The Child gallery photo" class="img-fluid mb-3">
+                <img src="img/louisthechild14.jpg" alt="Louis The Child gallery photo" class="img-fluid mb-3">
+                <img src="img/louisthechild15.jpg" alt="Louis The Child gallery photo" class="img-fluid">
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal" alt="Close" title="Close">Close</button>
