--- a/dev/html/portraits.html
+++ b/dev/html/portraits.html
@@ -41,10 +41,10 @@
                 </button>
               </div>
               <div class="modal-body">
-                <img src="img/portrait-cory03.jpg" loading="lazy" alt="Cowboy Mugshot gallery photo" class="img-fluid mb-3">
-                <img src="img/portrait-cory04.jpg" loading="lazy" alt="Cowboy Mugshot gallery photo" class="img-fluid mb-3">
-                <img src="img/portrait-cory08.jpg" loading="lazy" alt="Cowboy Mugshot gallery photo" class="img-fluid mb-3">
-                <img src="img/portrait-cory09.jpg" loading="lazy" alt="Cowboy Mugshot gallery photo" class="img-fluid">
+                <img src="img/portrait-cory03.jpg" alt="Cowboy Mugshot gallery photo" class="img-fluid mb-3">
+                <img src="img/portrait-cory04.jpg" alt="Cowboy Mugshot gallery photo" class="img-fluid mb-3">
+                <img src="img/portrait-cory08.jpg" alt="Cowboy Mugshot gallery photo" class="img-fluid mb-3">
+                <img src="img/portrait-cory09.jpg" alt="Cowboy Mugshot gallery photo" class="img-fluid">
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal" alt="Close" title="Close">Close</button>
@@ -70,10 +70,10 @@
                 </button>
               </div>
               <div class="modal-body">
-                <img src="img/portrait-peyton01.jpg" loading="lazy" alt="Peyton gallery photo" class="img-fluid mb-3">
-                <img src="img/portrait-peyton07.jpg" loading="lazy" alt="Peyton gallery photo" class="img-fluid mb-3">
-                <img src="img/portrait-peyton09.jpg" loading="lazy" alt="Peyton gallery photo" class="img-fluid mb-3">
-                <img src="img/portrait-peyton11.jpg" loading="lazy" alt="Peyton gallery photo" class="img-fluid">
+                <img src="img/portrait-peyton01.jpg" alt="Peyton gallery photo" class="img-fluid mb-3">
+                <img src="img/portrait-peyton07.jpg" alt="Peyton gallery photo" class="img-fluid mb-3">
+                <img src="img/portrait-peyton09.jpg" alt="Peyton gallery photo" class="img-fluid mb-3">
+                <img src="img/portrait-peyton11.jpg" alt="Peyton gallery photo" class="img-fluid">
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal" alt="Close" title="Close">Close</button>
@@ -99,10 +99,10 @@
                 </button>
               </div>
               <div class="modal-body">
-                <img src="img/portrait-sam01.jpg" loading="lazy" alt="Various gallery photo" class="img-fluid mb-3">
-                <img src="img/portrait-various07.jpg" loading="lazy" alt="Various gallery photo" class="img-fluid mb-3">
-                <img src="img/portrait-various12.jpg" loading="lazy" alt="Various gallery photo" class="img-fluid mb-3">
-                <img src="img/portrait-various19.jpg" loading="lazy" alt="Various gallery photo" class="img-fluid">
+                <img src="img/portrait-sam01.jpg" alt="Various gallery photo" class="img-fluid mb-3">
+                <img src="img/portrait-various07.jpg" alt="Various gallery photo" class="img-fluid mb-3">
+                <img src="img/portrait-various12.jpg" alt="Various gallery photo" class="img-fluid mb-3">
+                <img src="img/portrait-various19.jpg" alt="Various gallery photo" class="img-fluid">
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal" alt="Close" title="Close">Close</button>
