--- a/dev/html/graduates.html
+++ b/dev/html/graduates.html
@@ -52,22 +52,22 @@
                 </button>
               </div>
               <div class="modal-body">
-                <img src="img/grad01.jpg" alt="Graduates gallery photo" class="img-fluid mb-3">
-                <img src="img/grad03.jpg" alt="Graduates gallery photo" class="img-fluid mb-3">
-                <img src="img/grad04.jpg" alt="Graduates gallery photo" class="img-fluid mb-3">
-                <img src="img/grad05.jpg" alt="Graduates gallery photo" class="img-fluid mb-3">
-                <img src="img/grad06.jpg" alt="Graduates gallery photo" class="img-fluid mb-3">
-                <img src="img/grad07.jpg" alt="Graduates gallery photo" class="img-fluid mb-3">
-                <img src="img/grad08.jpg" alt="Graduates gallery photo" class="img-fluid mb-3">
-                <img src="img/grad12.jpg" alt="Graduates gallery photo" class="img-fluid mb-3">
-                <img src="img/grad14.jpg" alt="Graduates gallery photo" class="img-fluid mb-3">
-                <img src="img/grad15.jpg" alt="Graduates gallery photo" class="img-fluid mb-3">
-                <img src="img/grad16.jpg" alt="Graduates gallery photo" class="img-fluid mb-3">
-                <img src="img/grad18.jpg" alt="Graduates gallery photo" class="img-fluid mb-3">
-                <img src="img/grad19.jpg" alt="Graduates gallery photo" class="img-fluid mb-3">
-                <img src="img/grad20.jpg" alt="Graduates gallery photo" class="img-fluid mb-3">
-                <img src="img/grad21.jpg" alt="Graduates gallery photo" class="img-fluid mb-3">
-                <img src="img/grad23.jpg" alt="Graduates gallery photo" class="img-fluid">
+                <img src="img/grad01.jpg" alt="Graduates gallery photo" loading="lazy" class="img-fluid mb-3">
+                <img src="img/grad03.jpg" alt="Graduates gallery photo" loading="lazy" class="img-fluid mb-3">
+                <img src="img/grad04.jpg" alt="Graduates gallery photo" loading="lazy" class="img-fluid mb-3">
+                <img src="img/grad05.jpg" alt="Graduates gallery photo" loading="lazy" class="img-fluid mb-3">
+                <img src="img/grad06.jpg" alt="Graduates gallery photo" loading="lazy" class="img-fluid mb-3">
+                <img src="img/grad07.jpg" alt="Graduates gallery photo" loading="lazy" class="img-fluid mb-3">
+                <img src="img/grad08.jpg" alt="Graduates gallery photo" loading="lazy" class="img-fluid mb-3">
+                <img src="img/grad12.jpg" alt="Graduates gallery photo" loading="lazy" class="img-fluid mb-3">
+                <img src="img/grad14.jpg" alt="Graduates gallery photo" loading="lazy" class="img-fluid mb-3">
+                <img src="img/grad15.jpg" alt="Graduates gallery photo" loading="lazy" class="img-fluid mb-3">
+                <img src="img/grad16.jpg" alt="Graduates gallery photo" loading="lazy" class="img-fluid mb-3">
+                <img src="img/grad18.jpg" alt="Graduates gallery photo" loading="lazy" class="img-fluid mb-3">
+                <img src="img/grad19.jpg" alt="Graduates gallery photo" loading="lazy" class="img-fluid mb-3">
+                <img src="img/grad20.jpg" alt="Graduates gallery photo" loading="lazy" class="img-fluid mb-3">
+                <img src="img/grad21.jpg" alt="Graduates gallery photo" loading="lazy" class="img-fluid mb-3">
+                <img src="img/grad23.jpg" alt="Graduates gallery photo" loading="lazy" class="img-fluid">
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal" alt="Close" title="Close">Close</button>
